--- a/test.plist
+++ b/test.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://2015.filemail.com/api/file/get?filekey=hYVfo4v376mxpCYLWUJ_AqVzEm25zPc3EPYPCE-1AFDI2A4HV41gVfIKHqEsFZWkbCqUSYw&pk_vid=43ea0f63ccecf554172277929710ac65</string>
+                    <string>https://github.com/dynail/test/releases/download/v0.0.1/14.3.0.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
