--- a/online.plist
+++ b/online.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://github.com/dynail/test/releases/download/v0.0.1/14.3.0.ipa</string>
+                    <string>https://github.com/dynail/test/releases/download/v0.0.1/Online.15.10.0.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
