--- a/imovie.plist
+++ b/imovie.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://github.com/dynail/test/releases/download/untagged-d89e0181b6d40f544aed/iMovie_2.2.8.ipa</string>
+                    <string>https://github.com/dynail/test/releases/download/v0.0.1/iMovie_2.2.8.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
