--- a/online.plist
+++ b/online.plist
@@ -11,15 +11,15 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://github.com/dynail/test/releases/download/v0.0.1/Online.16.0.0.ipa</string>
+                    <string>https://github.com/dynail/test/releases/download/v0.0.1/arzOnline_16.0.1.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
-                <string>com.bgdt.online</string>
+                <string>com.budgetonline.ios</string>
                 <key>bundle-version</key>
-                <string>16.0.0</string>
+                <string>16.0.1</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>title</key>
